<resources>
    <string name="app_name">UniStat</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="view_calendar_button_text">View Calendar</string>
    <string name="accept_meeting_button">Accept</string>
    <string name="decline_meeting_button">Decline</string>
    <string name="join_meeting_button">Join Meeting</string>
    <string name="server_client_id">572477064370-fo6khhqfp4g0bp8k8s9fqsjn2msoqimq.apps.googleusercontent.com</string>
    <string name="user_status_question_text">Which of the following applies to you?</string>
    <string name="hs_student_button_text">I am a High School Student</string>
    <string name="univ_student_button_text">I am a University Student/Graduate</string>
    <string name="next_button_text">next</string>
    <string name="univ_name_input">Your University</string>
    <string name="univ_grade_input">Your Current University GPA</string>
    <string name="univ_major_input">Your Major</string>
    <string name="univ_entrance_input">Your SAT/Entrance-exam score</string>
    <string name="univ_user_bio_input">Your Story</string>
    <string name="user_profile_prompt">Let\'s get to know You…</string>
    <string name="calendar">Calendar</string>
    <string name="view_stats">Home</string>
    <string name="profile">Settings</string>
    <string name="view_profile_button_text">View Profile</string>
    <string name="user_profile_text">Your Profile</string>
    <string name="confirm_changes_button_text">Confirm Changes</string>
    <string name="edit_profile_button_text">Edit Profile</string>
    <string name="user_univ_text">University</string>
    <string name="user_major_text">Major</string>
    <string name="user_gpa_text">GPA</string>
    <string name="user_entrance_score_text">Entrance Score</string>
    <string name="user_story_text">Story</string>
    <string name="change_theme">Change Theme</string>
    <string name="sort_by_gpa_text">Sort by GPA</string>
    <string name="sort_by_entrance_score_text">Sort by Entrance Score</string>
    <string name="filter_by_univ_text">Filter by University</string>
    <string name="filter_by_major_text">Filter by Major</string>
    <string name="search_text">Search</string>
    <string name="request_meeting_button_text">Request a Meeting</string>
    <string name="book_meeting_text">Book your meeting…</string>
    <string name="confirm_request_text">Confirm Request</string>
    <string name="text_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at tellus iaculis, feugiat arcu non, interdum sapien. Quisque non ex dolor. Vestibulum vel aliquam eros, dictum pulvinar justo. Aenean et velit dolor. Nullam quis bibendum ante, sed mollis leo. Donec suscipit mauris est, vel dignissim felis venenatis vitae. Nulla sed ultricies ex. In hac habitasse platea dictumst. Vivamus interdum erat ut convallis consectetur. Nulla varius ullamcorper tincidunt. Sed mattis ligula eget sapien ullamcorper, id sollicitudin tortor dapibus.</string>
    <string name="make_payment_button">Make Payment</string>
    <string name="googlepay_status_unavailable">Google Pay is not yet available</string>
    <string name="pay">Pay</string>
    <string name="greet_user_text"/>
    <string name="loading_text">loading…</string>
    <string name="date_heading">Date</string>
    <string name="time_heading">Time</string>
    <string name="amount_heading">Payment Amount</string>
    <string name="meeting_with_heading">Meeting With</string>





</resources>