<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meetings.EventActivity">

    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName"
        app:layout_constraintVertical_bias="0.015" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView3"-->
<!--        android:layout_width="25dp"-->
<!--        android:layout_height="25dp"-->
<!--        android:gravity="left"-->
<!--        app:srcCompat="@drawable/ic_baseline_person_24"-->
<!--        tools:layout_editor_absoluteX="36dp"-->
<!--        tools:layout_editor_absoluteY="516dp" />-->

    <TextView
        android:id="@+id/meetingDateHeading"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:text="@string/date_heading"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/meetingTimeHeading"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/time_heading"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/meetingWithHeading"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/meeting_with_heading"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/meetingAmountHeading"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/amount_heading"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:gravity="left"-->
<!--        app:srcCompat="@android:drawable/ic_menu_recent_history"-->
<!--        tools:layout_editor_absoluteX="8dp"-->
<!--        tools:layout_editor_absoluteY="640dp" />-->

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/loading_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/meetingAmountHeading"
        app:layout_constraintTop_toBottomOf="@+id/meetingAmountHeading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/loading_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/meetingDateHeading"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/loading_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/meetingTimeHeading"
        app:layout_constraintTop_toBottomOf="@+id/meetingTimeHeading"
        app:layout_constraintVertical_bias="0.0" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:gravity="left"-->
<!--        app:srcCompat="@android:drawable/ic_menu_my_calendar"-->
<!--        tools:layout_editor_absoluteX="56dp"-->
<!--        tools:layout_editor_absoluteY="640dp" />-->

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/loading_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/meetingWithHeading"
        app:layout_constraintTop_toBottomOf="@+id/meetingWithHeading"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/declineMeetingRequest"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginBottom="180dp"
        android:text="@string/decline_meeting_button"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:iconGravity="start"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/acceptMeetingRequest" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceptMeetingRequest"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginBottom="180dp"
        android:text="@string/accept_meeting_button"
        app:icon="@drawable/ic_baseline_check_circle_24"
        app:iconGravity="start"
        app:iconSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/declineMeetingRequest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinMeeting"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginBottom="88dp"
        android:text="@string/join_meeting_button"
        app:icon="@android:drawable/presence_video_busy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>