<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewMentorProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mentorProfileImage"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/grey"
                app:layout_constraintBottom_toTopOf="@+id/editUserUnivInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.094"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/mentorNameText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/editUserUnivInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userProfileImage"
                app:layout_constraintVertical_bias="0.203" />

            <View
                android:layout_width="350dp"
                android:layout_height="0.7dp"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:background="@color/grey" />


            <TextView
                android:id="@+id/userUnivHeading"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_univ_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/univNameText"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/open_sans"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/userMajorHeading"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_major_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/univMajorText"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/open_sans"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />


            <TextView
                android:id="@+id/userGpaHeading"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_gpa_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/univGpaText"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/open_sans"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />


            <TextView
                android:id="@+id/userEntranceScoreHeading"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_entrance_score_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/univEntranceScoreText"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/open_sans"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/userBioHeading"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_story_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <TextView
                android:id="@+id/uniBioText"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/open_sans"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/request_meeting_button_text"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textAllCaps="false"
                app:strokeColor="@color/purple_200" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>